--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
     --gunmetal: #5E607A;
     --vermillion: #F15D51;
     --yellow: #E9AA52;
+    --silver: #C5C6CE;
+
 } 
 
 body{
@@ -55,18 +57,54 @@ body{
 }
 
 .primeira-secao button {
-    padding: 0.75 2rem;
+    padding: 0.75rem 2rem;
     background-color: var(--vermillion);
-    border: 0;
+    border: none;
     text-transform: uppercase;
     color: var(--almost-white);
     font-weight: 700;
     font-size: 0.875rem;
     letter-spacing: 0.275rem;
     line-height: 1.5rem;
-    
+}
+
+.segunda-secao {
+    background-color: var(--dark-blue);
+    margin-bottom: 4rem;
+    padding: 1.5rem 1.1rem;
+}
+
+.margin-border-padding {
+    border-bottom: 1px solid var(--gunmetal);
+    margin-bottom: 1.75rem;
+    padding-bottom: 1.75rem;
+}
+
+
+.segunda-secao h2 {
+    color: var(--yellow);
+    font-size: 2rem;
+    line-height: 100%;
+    margin-bottom: 2.2rem;
 
 }
+
+.segunda-secao h3 {
+    color: var(--almost-white);
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    font-weight: 800;
+    margin-bottom: 0.5rem;
+}
+
+.segunda-secao p {
+    color: var(--silver);
+    font-size: 0.9375rem;
+    line-height: 1.625rem;
+}
+
+
+
 
 
 
