--- a/style.css
+++ b/style.css
@@ -21,16 +21,58 @@ body{
     background-color: var(--almost-white);
 }
 
-.header-moble {
+body.menu-open::before {
+    content: "";
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 26, 0.5);
+    top: 0;
+    left: 0;
+
+}
+
+.header-mobile {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
 }
 
-.header-mobile button{
+.header-mobile button {
     border: 0;
     background: 0;
+    width: fit-content;
+
+}
+
+.header-mobile nav {
+    position: fixed;
+    background-color: var(--almost-white);
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 16rem;
+    z-index: 999;
+
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    gap: 1.5rem;
+    display: none;
+}
+
+.header-mobile nav button {
+    margin-left: auto;
+    margin-bottom: 4rem;
+
+}
+
+.header-mobile nav a {
+    text-decoration: none;
+    color: var(--dark-blue);
+    font-size: 1.125;
+    line-height: 1.5;
 }
 
 .primeira-secao {
@@ -136,5 +178,6 @@ max-width: 6.25rem;
     font-size: 0.9375rem;
     line-height: 1.625rem;
     color: var(--gunmetal);
-    
+
 }
+
