--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     background-color: var(--almost-white);
 }
 
-body.menu-open::before {
+body.escurecer::before{
     content: "";
     position: fixed;
     height: 100vh;
@@ -49,7 +49,7 @@ body.menu-open::before {
 .header-mobile nav {
     position: fixed;
     background-color: var(--almost-white);
-    right: 0;
+    right: -16rem;
     top: 0;
     height: 100vh;
     width: 16rem;
@@ -59,8 +59,14 @@ body.menu-open::before {
     flex-direction: column;
     padding: 1.5rem;
     gap: 1.5rem;
-    display: none;
+
+    transition: 0.7s;
 }
+
+.header-mobile nav.abrir {
+    right: 0;
+}
+
 
 .header-mobile nav button {
     margin-left: auto;
