--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
     --vermillion: #F15D51;
     --yellow: #E9AA52;
     --silver: #C5C6CE;
-
 } 
 
 body{
@@ -29,24 +28,25 @@ body.escurecer::before{
     background-color: rgba(0, 0, 26, 0.5);
     top: 0;
     left: 0;
-
 }
 
-.header-mobile {
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
+
+    max-width: 1110px;
+    margin-inline: auto;
 }
 
-.header-mobile button {
-    border: 0;
-    background: 0;
+header button {
+    border: none;
+    background: none;
     width: fit-content;
-
 }
 
-.header-mobile nav {
+header nav.mobile {
     position: fixed;
     background-color: var(--almost-white);
     right: -16rem;
@@ -63,22 +63,26 @@ body.escurecer::before{
     transition: 0.7s;
 }
 
-.header-mobile nav.abrir {
+header nav.mobile.abrir {
     right: 0;
 }
 
-
-.header-mobile nav button {
+header nav button {
     margin-left: auto;
     margin-bottom: 4rem;
-
 }
 
-.header-mobile nav a {
+
+header .mobile a {
     text-decoration: none;
     color: var(--dark-blue);
-    font-size: 1.125;
-    line-height: 1.5;
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+}
+
+main {
+    max-width: 1110px;
+    margin-inline: auto;
 }
 
 .primeira-secao {
@@ -128,13 +132,11 @@ body.escurecer::before{
     padding-bottom: 1.75rem;
 }
 
-
 .segunda-secao h2 {
     color: var(--yellow);
     font-size: 2rem;
     line-height: 100%;
     margin-bottom: 2.2rem;
-
 }
 
 .segunda-secao h3 {
@@ -148,20 +150,19 @@ body.escurecer::before{
 .segunda-secao p {
     color: var(--silver);
     font-size: 0.9375rem;
-    line-height: 1.625rem;
+    
 }
 
 
 .terceira-secao > div {
     display: flex;
     align-items: center;
-    gap:1.5rem ;
+    gap: 1.5rem ;
     margin-bottom: 2rem;
-
 }
 
 .terceira-secao img {
-max-width: 6.25rem;
+    max-width: 6.25rem;
 
 }
 
@@ -169,7 +170,6 @@ max-width: 6.25rem;
     color: var(--silver);
     font-size: 2rem;
     line-height: 100%;
-
 }
 
 .terceira-secao h2 {
@@ -184,6 +184,65 @@ max-width: 6.25rem;
     font-size: 0.9375rem;
     line-height: 1.625rem;
     color: var(--gunmetal);
-
 }
 
+@media(min-width: 1110px) {
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 1.75rem;
+    }
+
+    .primeira-secao {
+        grid-column: 1 / 3;
+    }
+
+
+
+    header > button {
+        display: none;
+    }
+    
+
+    header .desktop {
+        display: flex;
+        gap: 2.5rem;
+    }
+
+    header .desktop a {
+        font-size: 0.9375rem;
+        line-height: 1.625rem;
+        text-decoration: 0;
+        color: var(--gunmetal);
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
