--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ main {
 .segunda-secao p {
     color: var(--silver);
     font-size: 0.9375rem;
-    
+    line-height: 1.625rem;
 }
 
 
@@ -195,9 +195,27 @@ main {
 
     .primeira-secao {
         grid-column: 1 / 3;
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1.75rem;
     }
 
+    .primeira-secao picture {
+        grid-column: 1 / 3;
+    }
 
+    .primeira-secao img {
+        margin: 0;
+    }
+
+    .primeira-secao h1 {
+        font-size: 3.5rem;
+    }
+
+    .segunda-secao h1 {
+        font-size: 2.5rem;
+    }
 
     header > button {
         display: none;
