Adicao dos efeitos, e estilizacao e termino do projeto

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ header button {
     border: none;
     background: none;
     width: fit-content;
+    cursor: pointer;
 }
 
 header nav.mobile {
@@ -78,6 +79,10 @@ header .mobile a {
     color: var(--dark-blue);
     font-size: 1.125rem;
     line-height: 1.5rem;
+}
+
+header .desktop {
+    display: none;
 }
 
 main {
@@ -180,6 +185,10 @@ main {
     margin-block: 0.6rem;
 }
 
+.terceira-secao a {
+    text-decoration: none;
+}
+
 .terceira-secao p {
     font-size: 0.9375rem;
     line-height: 1.625rem;
@@ -187,6 +196,27 @@ main {
 }
 
 @media(min-width: 1110px) {
+    header > button {
+        display: none;
+    }
+    
+
+    header .desktop {
+        display: flex;
+        gap: 2.5rem;
+    }
+
+    header .desktop a {
+        font-size: 0.9375rem;
+        line-height: 1.625rem;
+        text-decoration: 0;
+        color: var(--gunmetal);
+    }
+
+    header .desktop a:hover {
+        color: var(--vermillion);
+    }
+
     main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -213,27 +243,24 @@ main {
         font-size: 3.5rem;
     }
 
+    .primeira-secao button:hover {
+        background-color: var(--dark-blue) ;
+        cursor: pointer;
+    }
+
     .segunda-secao h1 {
         font-size: 2.5rem;
     }
 
-    header > button {
-        display: none;
+    .terceira-secao {
+        display: flex;
+        grid-column: 1 / 4;
+    }
+
+    .terceira-secao h2:hover {
+        color: var(--vermillion);
     }
     
-
-    header .desktop {
-        display: flex;
-        gap: 2.5rem;
-    }
-
-    header .desktop a {
-        font-size: 0.9375rem;
-        line-height: 1.625rem;
-        text-decoration: 0;
-        color: var(--gunmetal);
-    }
-
 
 
 
